EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==10/21/2011==
Derision: Fixed rez bug.
Akkadius: Fixed a spell crash that has been reported on The Hidden Forest with TryFadeEffect
Akkadius: Fixed a spell crash with ExecWeaponProc when a spell or weapon procs a spell that does not exist, you can catch the invalid spells in your spells log if you have them enabled

==10/20/2011==
Trevius: Fix for Perl Doors GetID() command.
Akkadius: Mysql #command CLI - Fixed an issue where the query string was being escaped
Akkadius: Mysql #command CLI - Added switches -s and -h. Switch -s providing space between the select lines in a query, -h highlighting every other row to be more readable

==10/19/2011==
KLS: (lerxst2112) Client::Message memory leak
Trevius: Potential crash fix for MoveTo() being used on an NPC that has a grid with wandertype 3.

==10/14/2011==
Leere: More than 6 members of a raid can now receive raid experience.
Sorvani: Added AE Rampage message and filter

==10/11/2011==
KLS: Added Ebon/Radiant crystal reclaim for the clients I have.(Titanium/SoD/Underfoot)
KLS: Seperated buffs from the player profile.
KLS: Seperated buffs allowed me to fix the counters on buffs for the newer clients across zone lines, as well as melee and magic runes are no longer limited to 65k as they are no longer uint16s.
KLS: Added ability to save variables to items. Via $client->SetCustomItemData(13, "SomeVariable", 1024); #give our mainhand some variable.
KLS: Added ability to retrieve items from the inventory in perl with $client->GetItemInInventory(slot_id);
KLS: Fixed Item::IsAugmentable() to return correctly if the first augment slot is not used.
KLS: Updated for latest code and readded Derisions' cross-zone /inviting.  I've been testing it for a while now and can't find any real issues with it so I readded it.